@@ -75,7 +75,12 @@
 
               <listitem>
                 <para>Set up a rule to ACCEPT traffic from these hosts back to
-                themselves.</para>
+                themselves. Beginning with Shorewall 4.4.9, this option is
+                automatically set if <emphasis
+                role="bold">routeback</emphasis> is specified in <ulink
+                url="shorewall-interfaces.html">shorewall-interfaces</ulink>
+                (5) or if the rules compiler detects that the interface is a
+                bridge.</para>
               </listitem>
             </varlistentry>
 
