@@ -393,6 +393,10 @@ None.
 7)  The generated ruleset now uses conntrack match for state matching,
     if it is available.
 
+8)  In /etc/shorewall/routestopped, the 'routeback' option is assumed
+    if the interface has 'routeback' specified (either explicitly or
+    detected).
+
 ----------------------------------------------------------------------------
 V I.  P R O B L E M S  C O R R E C T E D  A N D  N E W   F E A T U R E S
       I N   P R I O R  R E L E A S E S
