@@ -40,6 +40,9 @@ Changes in Shorewall 4.4.9
 
 19) Allow definition of an addressless bridge without a zone.
 
+20) In the routestopped file, assume 'routeback' if the interface has
+    'routeback'.
+
 Changes in Shorewall 4.4.8
 
 1)  Correct handling of RATE LIMIT on NAT rules.
